classDiagram
    %% Relaciones entre clases
    Usuario "1" --> "*" OrdenTrabajo : gestiona
    Maquina "1" --> "*" OrdenTrabajo : recibe
    Maquina "1" --> "1" TelemetriaService : reporta datos

    class Usuario {
        -int id
        -String email
        -String password
        -String rfidTag
        -String rol
        +login()
        +validarRFID()
    }

    class Maquina {
        -int id
        -String nombre
        -float umbralCritico
        -String estado
        +getEstadoActual()
        +setUmbral()
    }

    class OrdenTrabajo {
        -int id
        -String descripcion
        -DateTime fechaApertura
        -String prioridad
        -boolean estaCerrada
        +abrir()
        +cerrar()
    }

    class TelemetriaService {
        -String mongoUri
        +procesarLectura()
        +dispararAlerta()
    }
    